--- a/.github/workflows/workflow_pr.yml
+++ b/.github/workflows/workflow_pr.yml
@@ -23,14 +23,14 @@ defaults:
 
 jobs:
   terraform_account_workflow_development:
-    name: TF Plan/Apply Dev Account
+    name: TF Plan Dev Account
     uses: ./.github/workflows/terraform_account_job.yml
     with:
       workspace_name: development
     secrets: inherit
 
   terraform_account_workflow_production:
-    name: TF Plan/Apply Prod Account
+    name: TF Plan Prod Account
     needs: terraform_account_workflow_development
     uses: ./.github/workflows/terraform_account_job.yml
     with:
