--- a/.github/workflows/workflow_pr.yml
+++ b/.github/workflows/workflow_pr.yml
@@ -49,11 +49,24 @@ jobs:
       workspace_name: production
     secrets: inherit
 
-  # pr_deploy:
-  #     name: PR Environment Deploy
-  #     needs: [create_tags]
-  #     uses: ./.github/workflows/terraform_environment_job.yml
-  #     with:
-  #       workspace_name: ${{ needs.create_tags.outputs.environment_workspace_name }}
-  #       version_tag: ${{ needs.create_tags.outputs.version_tag }}
-  #     secrets: inherit
+  pr_deploy:
+      name: PR Environment Deploy
+      needs: [create_tags]
+      uses: ./.github/workflows/terraform_environment_job.yml
+      with:
+        workspace_name: ${{ needs.create_tags.outputs.environment_workspace_name }}
+        version_tag: ${{ needs.create_tags.outputs.version_tag }}
+      secrets: inherit
+
+  end_of_pr_workflow:
+    name: End of PR Workflow
+    if: github.ref != 'refs/heads/main'
+    runs-on: ubuntu-latest
+    environment:
+      name: ${{ needs.create_tags.outputs.environment_workspace_name }}
+    needs: [pr_deploy, create_tags]
+    steps:
+      - name: End of PR Workflow
+        run: |
+          echo "${{ needs.pr_deploy.outputs.terraform_workspace_name }} PR environment tested, built and deployed"
+          echo "Tag Deployed: ${{ needs.pr_deploy.outputs.terraform_container_version }}"
