--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,6 +27,7 @@ repos:
     hooks:
       - id: terraform_fmt
       - id: terraform_validate
+        exclude: region/[^/]+$.
   - repo: https://github.com/lietu/go-pre-commit
     rev: v0.0.1
     hooks:
