--- a/.github/workflows/analysis-tfsec-pr-feedback.yml
+++ b/.github/workflows/analysis-tfsec-pr-feedback.yml
@@ -22,5 +22,4 @@ jobs:
     uses: ministryofjustice/opg-github-workflows/.github/workflows/analysis-infrastructure-tfsec-pr-feedback.yml@main
     with:
       terraform_path: '["terraform/account", "terraform/environment"]'
-    secrets:
-      github_token: ${{ secrets.GITHUB_TOKEN }}
+    secrets: inherit
