try with original workflow

--- a/.github/workflows/analysis-tfsec-pr-feedback.yml
+++ b/.github/workflows/analysis-tfsec-pr-feedback.yml
@@ -1,10 +1,11 @@
-name: "[Analysis - Infrastructure] TFSec Pull Request Feedback"
+name: "[Analysis] TFSec PR feedback"
 
 on:
-  workflow_dispatch:
   pull_request:
-    branches: [ main, master ]
-    paths: ["**.tf"]
+    branches: [ main ]
+    paths:
+      - "**.tf"
+
 permissions:
   actions: read
   checks: read
@@ -18,8 +19,20 @@ permissions:
   statuses: none
 
 jobs:
-  tfsec_pr_feedback:
-    uses: ministryofjustice/opg-github-workflows/.github/workflows/analysis-infrastructure-tfsec-pr-feedback.yml@main
-    with:
-      terraform_path: '["terraform/account", "terraform/environment"]'
-    secrets: inherit
+  tfsec:
+    name: TFSec Static analysis
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        terraform_path: ['terraform/account', 'terraform/environment']
+    steps:
+      - name: checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 2
+      - name: tfsec with pr comments
+        uses: tfsec/tfsec-pr-commenter-action@v1.2.0
+        with:
+          working_directory: ${{ matrix.terraform_path }}
+          github_token: ${{secrets.GITHUB_TOKEN}}
+          soft_fail_commenter: true
