--- a/.github/workflows/go-unit-tests.yml
+++ b/.github/workflows/go-unit-tests.yml
@@ -21,7 +21,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Setup Go
-      - uses: actions/setup-go@v3
+        uses: actions/setup-go@v3
         with:
           go-version: '^1.18'
       - name: Run tests and generate coverage report
