--- a/.github/workflows/go-unit-tests.yml
+++ b/.github/workflows/go-unit-tests.yml
@@ -1,7 +1,6 @@
 name: Run Go unit tests and Push coverage reports to Codecov
 on:
-  pull_request:
-    branches: [ main ]
+  workflow_call:
 
 permissions:
   contents: write
