--- a/.github/workflows/go-unit-tests.yml
+++ b/.github/workflows/go-unit-tests.yml
@@ -25,11 +25,10 @@ jobs:
           go-version: '^1.18'
       - name: Run tests and generate coverage report
         run: |
-          find . -name go.mod -execdir go test ./... -race -covermode=atomic -coverprofile=./coverage/coverage.out \;
+          find . -name go.mod -execdir go test ./... -race -covermode=atomic -coverprofile=coverage.out \;
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
         with:
-          directory: ./coverage
           fail_ci_if_error: true
           files: ./coverage.out,
           flags: unittests
