--- a/.github/workflows/go-unit-tests.yml
+++ b/.github/workflows/go-unit-tests.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Run tests and generate coverage report
 
         run: |
-          find . -name go.mod -execdir go test ./... -race -covermode=atomic -coverprofile=coverage.out \;
+          go test ./... -race -covermode=atomic -coverprofile=coverage.out -v ./...
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
         with:
