--- a/.github/workflows/go-unit-tests.yml
+++ b/.github/workflows/go-unit-tests.yml
@@ -21,9 +21,9 @@ jobs:
           cat coverage.out
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
-#        with:
+        with:
 #          fail_ci_if_error: true
 #          files: ./coverage.out,
-#          flags: unittests
+          flags: unittests
 #          name: codecov-umbrella
 #          verbose: true
