--- a/.github/workflows/go-unit-tests.yml
+++ b/.github/workflows/go-unit-tests.yml
@@ -15,9 +15,8 @@ jobs:
         with:
           go-version: '^1.18'
       - name: Run tests and generate coverage report
-
         run: |
-          go test ./... -race -covermode=atomic -coverprofile=coverage.out -v ./...
+          go test ./... -race -coverpkg -covermode=atomic -coverprofile=coverage.out -v ./...
           cat coverage.out
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
