--- a/.github/workflows/go-unit-tests.yml
+++ b/.github/workflows/go-unit-tests.yml
@@ -22,7 +22,7 @@ jobs:
         uses: codecov/codecov-action@v3
         with:
 #          fail_ci_if_error: true
-#          files: ./coverage.out,
+          files: coverage.out
           flags: unittests
 #          name: codecov-umbrella
 #          verbose: true
