--- a/.github/workflows/workflow_pr.yml
+++ b/.github/workflows/workflow_pr.yml
@@ -26,6 +26,18 @@ jobs:
     name: Create Tags
     uses: ./.github/workflows/tags_job.yml
 
+  go_unit_tests:
+    name: Run Go unit tests
+    uses: ./.github/workflows/go-unit-tests.yml
+
+  docker_build_scan_push:
+    name: Docker Build, Scan and Push
+    uses: ./.github/workflows/docker_job.yml
+    needs: [go_unit_tests, create_tags]
+    with:
+      tag: ${{ needs.create_tags.outputs.version_tag }}
+    secrets: inherit
+
   terraform_account_workflow_development:
     name: TF Plan Dev Account
     uses: ./.github/workflows/terraform_account_job.yml
@@ -49,13 +61,11 @@ jobs:
       workspace_name: production
     secrets: inherit
 
-  go_unit_tests:
-    name: Run Go unit tests
-    uses: ./.github/workflows/go-unit-tests.yml
+
 
   pr_deploy:
       name: PR Environment Deploy
-      needs: [create_tags]
+      needs: [create_tags, docker_build_scan_push]
       uses: ./.github/workflows/terraform_environment_job.yml
       with:
         workspace_name: ${{ needs.create_tags.outputs.environment_workspace_name }}
