--- a/.github/workflows/docker_job.yml
+++ b/.github/workflows/docker_job.yml
@@ -51,7 +51,7 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_ACTIONS }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_ACTIONS }}
           aws-region: eu-west-1
-          role-to-assume: arn:aws:iam::311462405659:role/opg-maintenance-ci
+          role-to-assume: arn:aws:iam::311462405659:role/modernising-lpa-ci
           role-duration-seconds: 900
           role-session-name: OPGModernisingLPATerraformGithubAction
       - name: ECR Login
