--- a/.github/workflows/go-unit-tests.yml
+++ b/.github/workflows/go-unit-tests.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Run tests and generate coverage report
         run: |
-          go test -race -covermode=atomic -coverprofile=coverage.out -v
+          go test -race -covermode=atomic -coverprofile=coverage.txt -v
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
         with:
