--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,8 +26,8 @@ repos:
     rev: v1.74.1
     hooks:
       - id: terraform_fmt
-      - id: terraform_validate
-        exclude: region/[^/]+$.
+      # - id: terraform_validate
+      #   exclude: region/[^/]+$.
   - repo: https://github.com/lietu/go-pre-commit
     rev: v0.0.1
     hooks:
