--- a/app/package.json
+++ b/app/package.json
@@ -8,6 +8,8 @@
     "build:images": "mkdir -p web/static/assets/images && cp node_modules/govuk-frontend/govuk/assets/images/* node_modules/@ministryofjustice/frontend/moj/assets/images/* web/static/assets/images",
     "build:fonts": "mkdir -p web/static/assets/fonts && cp node_modules/govuk-frontend/govuk/assets/fonts/* web/static/assets/fonts",
     "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
+    "cypress:run:debug": "cypress run --headed",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "license": "MIT",
