--- a/.github/workflows/workflow_pr.yml
+++ b/.github/workflows/workflow_pr.yml
@@ -75,10 +75,12 @@ jobs:
     if: github.ref != 'refs/heads/main'
     runs-on: ubuntu-latest
     environment:
-      name: ${{ needs.create_tags.outputs.environment_workspace_name }}
+      name: "dev_${{ needs.create_tags.outputs.environment_workspace_name }}"
+      url: "https://${{ needs.pr_deploy.outputs.url }}/home"
     needs: [pr_deploy, create_tags]
     steps:
       - name: End of PR Workflow
         run: |
           echo "${{ needs.pr_deploy.outputs.terraform_workspace_name }} PR environment tested, built and deployed"
           echo "Tag Deployed: ${{ needs.pr_deploy.outputs.terraform_container_version }}"
+          echo "URL: https://${{ needs.pr_deploy.outputs.url }}/home"
