MLPAB-72 - Clean up PR environments (#18)
* mark a PR environment as protected

* destroy unprotected environments hourly

--- a/.github/workflows/terraform_environment_job.yml
+++ b/.github/workflows/terraform_environment_job.yml
@@ -74,17 +74,17 @@ jobs:
           terraform plan -lock-timeout=300s -input=false -parallelism=30
         working-directory: ./terraform/environment
 
-      # - name: Protect environment workspace
-      #   if: github.ref != 'refs/heads/main'
-      #   env:
-      #     TF_WORKSPACE: ${{ inputs.workspace_name }}
-      #     TF_VAR_container_version: ${{ inputs.version_tag }}
-      #   run: |
-      #     wget https://github.com/TomTucka/terraform-workspace-manager/releases/download/v0.3.1/terraform-workspace-manager_Linux_x86_64.tar.gz -O $HOME/terraform-workspace-manager.tar.gz
-      #     sudo tar -xvf $HOME/terraform-workspace-manager.tar.gz -C /usr/local/bin
-      #     sudo chmod +x /usr/local/bin/terraform-workspace-manager
-      #     terraform-workspace-manager -register-workspace=$TF_WORKSPACE -time-to-protect=24 -aws-account-id=679638075911 -aws-iam-role=opg-maintenance-ci
-      #   working-directory: ./terraform/environment
+      - name: Protect environment workspace
+        if: github.ref != 'refs/heads/main'
+        env:
+          TF_WORKSPACE: ${{ inputs.workspace_name }}
+          TF_VAR_container_version: ${{ inputs.version_tag }}
+        run: |
+          wget https://github.com/TomTucka/terraform-workspace-manager/releases/download/v0.3.1/terraform-workspace-manager_Linux_x86_64.tar.gz -O $HOME/terraform-workspace-manager.tar.gz
+          sudo tar -xvf $HOME/terraform-workspace-manager.tar.gz -C /usr/local/bin
+          sudo chmod +x /usr/local/bin/terraform-workspace-manager
+          terraform-workspace-manager -register-workspace=$TF_WORKSPACE -time-to-protect=24 -aws-account-id=653761790766 -aws-iam-role=modernising-lpa-ci
+        working-directory: ./terraform/environment
 
       - name: Terraform Apply
         env:
