--- a/app/package.json
+++ b/app/package.json
@@ -11,12 +11,12 @@
         "cypress:run": "cypress run",
         "cypress:run:debug": "cypress run --headed",
         "test": "echo \"Error: no test specified\" && exit 1",
-        "codeceptjs": "codeceptjs run --steps",
-        "codeceptjs:headless": "HEADLESS=true codeceptjs run --steps",
-        "codeceptjs:ui": "codecept-ui --app",
-        "codeceptjs:demo": "codeceptjs run --steps -c node_modules/@codeceptjs/examples",
-        "codeceptjs:demo:headless": "HEADLESS=true codeceptjs run --steps -c node_modules/@codeceptjs/examples",
-        "codeceptjs:demo:ui": "codecept-ui --app  -c node_modules/@codeceptjs/examples"
+        "codecept": "codeceptjs run --steps",
+        "codecept:headless": "HEADLESS=true codeceptjs run --steps",
+        "codecept:ui": "codecept-ui --app",
+        "codecept:demo": "codeceptjs run --steps -c node_modules/@codeceptjs/examples",
+        "codecept:demo:headless": "HEADLESS=true codeceptjs run --steps -c node_modules/@codeceptjs/examples",
+        "codecept:demo:ui": "codecept-ui --app  -c node_modules/@codeceptjs/examples"
     },
     "license": "MIT",
     "dependencies": {
@@ -29,8 +29,11 @@
         "@codeceptjs/configure": "^0.8.0",
         "@codeceptjs/examples": "^1.2.1",
         "@codeceptjs/ui": "^0.4.6",
+        "axe-core": "^4.4.3",
+        "axe-playwright": "^1.1.11",
         "codeceptjs": "^3.3.4",
         "cypress": "^10.4.0",
+        "cypress-axe": "^1.0.0",
         "esbuild": "^0.14.53",
         "playwright": "^1.24.2",
         "sass": "^1.54.1"
