run PR workflow only when certain paths change

--- a/.github/workflows/workflow_pr.yml
+++ b/.github/workflows/workflow_pr.yml
@@ -4,6 +4,12 @@ on:
   pull_request:
     branches:
       - main
+    paths:
+      - 'app/**'
+      - 'web/**'
+      - 'terraform/**'
+      - 'scripts/**'
+      # - '.github/workflows/**'
 
 permissions:
   contents: write
