--- a/package.json
+++ b/package.json
@@ -3,25 +3,24 @@
     "version": "0.0.1",
     "scripts": {
         "build": "yarn build:js && yarn build:css && yarn build:images && yarn build:fonts",
-        "build:js": "esbuild --bundle web/assets/main.js --minify --outdir=web/static/javascript --sourcemap --resolve-extensions=.mjs,.js",
-        "build:css": "sass --load-path . --style compressed web/assets/main.scss web/static/stylesheets/all.css",
+        "build:js": "node_modules/.bin/esbuild --bundle web/assets/main.js --minify --outdir=web/static/javascript --sourcemap --resolve-extensions=.mjs,.js",
+        "build:css": "node_modules/.bin/sass --load-path . --style compressed web/assets/main.scss web/static/stylesheets/all.css",
         "build:images": "mkdir -p web/static/assets/images && cp node_modules/govuk-frontend/govuk/assets/images/* node_modules/@ministryofjustice/frontend/moj/assets/images/* web/static/assets/images",
         "build:fonts": "mkdir -p web/static/assets/fonts && cp node_modules/govuk-frontend/govuk/assets/fonts/* web/static/assets/fonts",
-        "cypress:open": "cypress open",
-        "cypress:run": "cypress run",
-        "cypress:run:debug": "cypress run --headed",
+        "cypress:open": "node_modules/.bin/cypress open",
+        "cypress:run": "node_modules/.bin/cypress run",
+        "cypress:run:debug": "node_modules/.bin/cypress run --headed",
         "test": "echo \"Error: no test specified\" && exit 1",
-        "codecept": "codeceptjs run --steps",
+        "codecept": "node_modules/.bin/codeceptjs run --steps",
         "codecept:headless": "HEADLESS=true codeceptjs run --steps",
-        "codecept:ui": "codecept-ui --app",
-        "codecept:demo": "codeceptjs run --steps -c node_modules/@codeceptjs/examples",
+        "codecept:ui": "node_modules/.bin/codecept-ui --app",
+        "codecept:demo": "node_modules/.bin/codeceptjs run --steps -c node_modules/@codeceptjs/examples",
         "codecept:demo:headless": "HEADLESS=true codeceptjs run --steps -c node_modules/@codeceptjs/examples",
-        "codecept:demo:ui": "codecept-ui --app  -c node_modules/@codeceptjs/examples"
+        "codecept:demo:ui": "node_modules/.bin/codecept-ui --app  -c node_modules/@codeceptjs/examples"
     },
     "license": "MIT",
     "dependencies": {
         "@ministryofjustice/frontend": "^1.4.2",
-        "dart-sass": "^1.25.0",
         "govuk-frontend": "^4.2.0",
         "jquery": "^3.6.0"
     },
