--- a/.github/workflows/workflow_no_build_or_deployment.yml
+++ b/.github/workflows/workflow_no_build_or_deployment.yml
@@ -28,6 +28,9 @@ defaults:
     shell: bash
 
 jobs:
+  create_tags:
+    name: Create Tags
+    uses: ./.github/workflows/document_linting.yml
   end_of_pr_workflow:
     name: End of PR Workflow
     if: github.ref != 'refs/heads/main'
