--- a/.github/workflows/workflow_no_build_or_deployment.yml
+++ b/.github/workflows/workflow_no_build_or_deployment.yml
@@ -28,13 +28,14 @@ defaults:
     shell: bash
 
 jobs:
-  create_tags:
-    name: Create Tags
+  lint_documents:
+    name: Lint Documents
     uses: ./.github/workflows/document_linting_job.yml
   end_of_pr_workflow:
     name: End of PR Workflow
     if: github.ref != 'refs/heads/main'
     runs-on: ubuntu-latest
+    needs: lint_documents
     steps:
       - name: End of PR Workflow
         run: |
