--- a/.github/workflows/document_linting_job.yml
+++ b/.github/workflows/document_linting_job.yml
@@ -3,14 +3,14 @@ on:
 
 jobs:
   lint-changelog:
-    name: Lint changelog file
+    name: Lint all markdown files
     runs-on: ubuntu-latest
     steps:
     - name: Check out code
       uses: actions/checkout@v3
     - name: Lint changelog file
       uses: avto-dev/markdown-lint@v1
-      # with:
-      #   rules: '/lint/rules/changelog.js'
-      #   config: '/lint/config/changelog.yml'
-      #   args: './CHANGELOG.md'
+      with:
+        # rules: '/lint/rules/changelog.js'
+        # config: '/lint/config/changelog.yml'
+        args: '**/*.md'
