--- a/.github/workflows/document_linting_job.yml
+++ b/.github/workflows/document_linting_job.yml
@@ -12,5 +12,5 @@ jobs:
       uses: avto-dev/markdown-lint@v1
       with:
         # rules: '/lint/rules/changelog.js'
-        # config: '/lint/config/changelog.yml'
+        config: '../markdownlint.yml'
         args: '**/*.md'
