--- a/.github/workflows/document_linting_job.yml
+++ b/.github/workflows/document_linting_job.yml
@@ -2,13 +2,13 @@ on:
   workflow_call:
 
 jobs:
-  lint-changelog:
+  lint-markdown:
     name: Lint all markdown files
     runs-on: ubuntu-latest
     steps:
     - name: Check out code
       uses: actions/checkout@v3
-    - name: Lint changelog file
+    - name: Lint markdown files
       uses: avto-dev/markdown-lint@v1
       with:
         # rules: '/lint/rules/changelog.js'
