run on changes to workflows too

--- a/.github/workflows/workflow_pr.yml
+++ b/.github/workflows/workflow_pr.yml
@@ -9,7 +9,7 @@ on:
       - 'web/**'
       - 'terraform/**'
       - 'scripts/**'
-      # - '.github/workflows/**'
+      - '.github/workflows/**'
 
 permissions:
   contents: write
