--- a/.github/workflows/workflow_path_to_live.yml
+++ b/.github/workflows/workflow_path_to_live.yml
@@ -4,6 +4,12 @@ on:
   push:
     branches:
       - main
+    paths:
+      - 'app/**'
+      - 'web/**'
+      - 'terraform/**'
+      - 'scripts/**'
+      - '.github/workflows/**'
 
 permissions:
   contents: write
