MLAPB-22: Add cypress and codecept (#17)
* Add cypress and codeceptJS

* Add axe/a11y checking to cypress and codeceptJS

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,7 @@ query/s3_objects/**
 **/coverage.out
 **/node_modules
 **/yarn-error.log
+/cypress/video/*
+/cypress/screenshots/*
+/codecept/output/*
+/web/static/*
