--- a/.github/workflows/workflow_pr.yml
+++ b/.github/workflows/workflow_pr.yml
@@ -7,6 +7,8 @@ on:
     paths:
       - 'app/**'
       - 'web/**'
+      - 'codecept/**'
+      - 'cypress/**'
       - 'terraform/**'
       - 'scripts/**'
       - '.github/workflows/**'
