--- a/.github/workflows/workflow_no_build_or_deployment.yml
+++ b/.github/workflows/workflow_no_build_or_deployment.yml
@@ -7,6 +7,8 @@ on:
     paths-ignore:
       - 'app/**'
       - 'web/**'
+      - 'codecept/**'
+      - 'cypress/**'
       - 'terraform/**'
       - 'scripts/**'
       - '.github/workflows/**'
