MLPAB-77 - Run PR workflow only when certain paths change (#21)
* run PR workflow only when certain paths change

* add no build workflow

* lint markdown with an action

* fix linting issues in markdown documents

* don't use rule MD013

--- a/.github/workflows/workflow_path_to_live.yml
+++ b/.github/workflows/workflow_path_to_live.yml
@@ -4,6 +4,14 @@ on:
   push:
     branches:
       - main
+    paths:
+      - 'app/**'
+      - 'web/**'
+      - 'codecept/**'
+      - 'cypress/**'
+      - 'terraform/**'
+      - 'scripts/**'
+      - '.github/workflows/**'
 
 permissions:
   contents: write
