--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -3,13 +3,10 @@ version: '3.8'
 services:
   app:
     build:
-      context: .
-      dockerfile: Dockerfile.dev
-    container_name: app
-    ports:
-      - "5050:5000"
-    depends_on:
-      - oidc-server-mock
+      target: development
+
+    # depends_on:
+    #   - oidc-server-mock
     volumes:
-      - ./app:/app
-    command: air
+      - ./app:/go/bin/app
+      - ./web/template:/go/bin/web/template
