--- a/.github/workflows/workflow_pr.yml
+++ b/.github/workflows/workflow_pr.yml
@@ -78,6 +78,14 @@ jobs:
         version_tag: ${{ needs.create_tags.outputs.version_tag }}
       secrets: inherit
 
+  ui_tests:
+    name: Run Cypress UI tests
+    uses: ./.github/workflows/ui_test_job.yml
+    needs: [pr_deploy]
+    with:
+      base_url: "https://${{ needs.pr_deploy.outputs.url }}"
+    secrets: inherit
+
   end_of_pr_workflow:
     name: End of PR Workflow
     if: github.ref != 'refs/heads/main'
