Modify existing OIDC spec to fit Sign In flow and add initial redirect endoint ready to post JWT to and from

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -4,9 +4,21 @@ services:
   app:
     build:
       target: development
-
+    working_dir: /go/bin
     depends_on:
-      - oidc-server-mock
+      - oidc-mock
     volumes:
       - ./app:/go/bin/app
       - ./web/template:/go/bin/web/template
+
+  oidc-mock:
+    container_name: oidc-mock
+    image: stoplight/prism:4
+    build: # Does not have M1 native / arm64 images as yet but builds fine.
+      context: https://github.com/stoplightio/prism.git#v4.10.1
+      dockerfile: Dockerfile
+    command: 'mock -h 0.0.0.0 /tmp/OIDCSpec.yml'
+    volumes:
+      - ./mocks/OIDCSpec.yml:/tmp/OIDCSpec.yml:ro
+    ports:
+      - 7011:4010
