--- a/clients-config.json
+++ b/clients-config.json
@@ -4,7 +4,7 @@
     "Description": "Client for implicit flow",
     "AllowedGrantTypes": ["implicit"],
     "AllowAccessTokensViaBrowser": true,
-    "RedirectUris": ["http://localhost:3000/auth/oidc", "http://localhost:4004/auth/oidc"],
+    "RedirectUris": ["http://localhost:5050/set_token"],
     "AllowedScopes": ["openid", "profile", "email"],
     "IdentityTokenLifetime": 3600,
     "AccessTokenLifetime": 3600
@@ -13,6 +13,7 @@
     "ClientId": "client-credentials-mock-client",
     "ClientSecrets": ["client-credentials-mock-client-secret"],
     "Description": "Client for client credentials flow",
+    "RedirectUris": ["http://localhost:5050/set_token"],
     "AllowedGrantTypes": ["client_credentials"],
     "AllowedScopes": ["some-app"],
     "ClientClaimsPrefix": "",
