--- a/.github/workflows/ui_test_job.yml
+++ b/.github/workflows/ui_test_job.yml
@@ -33,4 +33,4 @@ jobs:
         #   browser: firefox
       - name: Stop the stack
         if: ${{ always() }}
-        run: docker-compose down
+        run: docker-compose  -f ./docker-compose.yml up down
