--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -21,7 +21,7 @@ services:
     volumes:
       - ./mocks/OIDCSpec.yml:/tmp/OIDCSpec.yml:ro
     ports:
-      - 7011:4010
+      - "7011:4010"
 
 # service for the nginx router that will forward /token to oidc-app
   oidc-proxy:
@@ -33,15 +33,14 @@ services:
     volumes:
       - ./mocks/nginx.conf:/etc/nginx/conf.d/default.conf
     ports:
-      - 7010:5000
+      - "7010:5000"
 
 # service for the /token go app
-  # oidc-app:
-  #   build:
-  #     context: .
-  #     dockerfile: ./mocks/Dockerfile
-  #   container_name: oidc-app
-  #   depends_on:
-  #     - oidc-mock
-  #   ports:
-  #     - 7012:5000
+  oidc-app:
+    build:
+      context: ./mocks/JWTProxy
+    container_name: oidc-app
+    depends_on:
+     - oidc-mock
+    ports:
+      - "7012:5000"
