--- a/.github/workflows/ui_test_job.yml
+++ b/.github/workflows/ui_test_job.yml
@@ -22,8 +22,27 @@ jobs:
       - uses: actions/checkout@v3
       # Install NPM dependencies, cache them correctly
       # and run all Cypress tests
-      - name: Build the stack
-        run: docker-compose -f ./docker-compose.yml up -d --build
+      - uses: unfor19/install-aws-cli-action@v1
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1.6.1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_ACTIONS }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_ACTIONS }}
+          aws-region: eu-west-1
+          role-to-assume: arn:aws:iam::311462405659:role/modernising-lpa-ci
+          role-duration-seconds: 900
+          role-session-name: OPGModernisingLPATerraformGithubAction
+      - name: ECR Login
+        id: login_ecr
+        uses: aws-actions/amazon-ecr-login@v1.5.0
+        with:
+          registries: 311462405659
+      - name: Pull Container
+        env:
+          ECR_REGISTRY: ${{ steps.login_ecr.outputs.registry }}
+          ECR_REPOSITORY: modernising-lpa/app
+        run: |
+          docker run -d -p 5050:5000 $ECR_REGISTRY/$ECR_REPOSITORY:latest
       - name: Cypress run
         uses: cypress-io/github-action@v4
         env:
@@ -33,4 +52,6 @@ jobs:
         #   browser: firefox
       - name: Stop the stack
         if: ${{ always() }}
-        run: docker-compose  -f ./docker-compose.yml up down
+        run:
+          docker ps -a -q
+          docker stop $(docker ps -a -q)
