stop container always

--- a/.github/workflows/ui_test_job.yml
+++ b/.github/workflows/ui_test_job.yml
@@ -61,5 +61,4 @@ jobs:
       - name: Stop the stack
         if: ${{ always() }}
         run:
-          docker ps -a -q
-          # docker stop $(docker ps -a -q)
+          docker stop $(docker ps -a -q)
