--- a/.github/workflows/workflow_pr.yml
+++ b/.github/workflows/workflow_pr.yml
@@ -83,8 +83,8 @@ jobs:
     uses: ./.github/workflows/ui_test_job.yml
     # needs: [pr_deploy]
     with:
-      run_against_docker: true
-      # base_url: https://24mlpab80.app.modernising.opg.service.justice.gov.uk
+      run_against_docker: false
+      base_url: https://24mlpab80.app.modernising.opg.service.justice.gov.uk
       # base_url: "https://${{ needs.pr_deploy.outputs.url }}"
     secrets: inherit
 
