--- a/.github/workflows/ui_test_job.yml
+++ b/.github/workflows/ui_test_job.yml
@@ -6,7 +6,7 @@ on:
         required: false
         type: string
         default: http://localhost:5050
-      run_against_docker:
+      run_against_image:
         description: 'Environment URL to target for testing'
         required: true
         type: boolean
@@ -25,11 +25,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      # Install NPM dependencies, cache them correctly
-      # and run all Cypress tests
       - uses: unfor19/install-aws-cli-action@v1
+        name: Run Against Image/aws-cli-action
         if: ${{ inputs.run_against_docker }}
-      - name: Configure AWS Credentials
+      - name: Run Against Image/Configure AWS Credentials
         if: ${{ inputs.run_against_docker }}
         uses: aws-actions/configure-aws-credentials@v1.6.1
         with:
@@ -39,13 +38,13 @@ jobs:
           role-to-assume: arn:aws:iam::311462405659:role/modernising-lpa-ci
           role-duration-seconds: 900
           role-session-name: OPGModernisingLPATerraformGithubAction
-      - name: ECR Login
+      - name: Run Against Image/ECR Login
         if: ${{ inputs.run_against_docker }}
         id: login_ecr
         uses: aws-actions/amazon-ecr-login@v1.5.0
         with:
           registries: 311462405659
-      - name: Run Service
+      - name: Run Against Image/Run Docker Compose Service
         if: ${{ inputs.run_against_docker }}
         env:
           ECR_REGISTRY: ${{ steps.login_ecr.outputs.registry }}
@@ -58,10 +57,7 @@ jobs:
         uses: cypress-io/github-action@v4
         env:
           CYPRESS_baseUrl: "${{ inputs.base_url }}"
-        # with:
-        #   # Specify Browser since container image is compile with Firefox
-        #   browser: firefox
-      - name: Stop Service
+      - name: Stop Docker Compose Service
         if: ${{ always() }}
         run:
           docker compose -f docker-compose.ci.yml down
