--- a/.github/workflows/ui_test_job.yml
+++ b/.github/workflows/ui_test_job.yml
@@ -27,9 +27,9 @@ jobs:
       - uses: actions/checkout@v3
       - uses: unfor19/install-aws-cli-action@v1
         name: Run Against Image/aws-cli-action
-        if: ${{ inputs.run_against_docker }}
+        if: ${{ inputs.run_against_iamge }}
       - name: Run Against Image/Configure AWS Credentials
-        if: ${{ inputs.run_against_docker }}
+        if: ${{ inputs.run_against_iamge }}
         uses: aws-actions/configure-aws-credentials@v1.6.1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_ACTIONS }}
@@ -39,13 +39,13 @@ jobs:
           role-duration-seconds: 900
           role-session-name: OPGModernisingLPATerraformGithubAction
       - name: Run Against Image/ECR Login
-        if: ${{ inputs.run_against_docker }}
+        if: ${{ inputs.run_against_iamge }}
         id: login_ecr
         uses: aws-actions/amazon-ecr-login@v1.5.0
         with:
           registries: 311462405659
       - name: Run Against Image/Run Docker Compose Service
-        if: ${{ inputs.run_against_docker }}
+        if: ${{ inputs.run_against_iamge }}
         env:
           ECR_REGISTRY: ${{ steps.login_ecr.outputs.registry }}
           ECR_REPOSITORY: modernising-lpa/app
