More proxy config

--- a/mocks/nginx.conf
+++ b/mocks/nginx.conf
@@ -7,6 +7,6 @@ server {
     }
 
     location /token {
-        proxy_pass http://oidc-mock:4010/token;
+        proxy_pass http://oidc-app:5060/token;
     }
 }
