--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -21,7 +21,7 @@ services:
     volumes:
       - ./mocks/OIDCSpec.yml:/tmp/OIDCSpec.yml:ro
     ports:
-      - "7011:4010"
+      - "7010:4010"
 
 # service for the nginx router that will forward /token to oidc-app
   oidc-proxy:
@@ -33,7 +33,7 @@ services:
     volumes:
       - ./mocks/nginx.conf:/etc/nginx/conf.d/default.conf
     ports:
-      - "7010:5000"
+      - "7011:5000"
 
 # service for the /token go app
   oidc-app:
@@ -43,4 +43,7 @@ services:
     depends_on:
      - oidc-mock
     ports:
-      - "7012:5000"
+      - "7012:5060"
+    environment:
+      - PROXY_PORT=5060
+      - PROXY_PRIVATE_KEY="/app/private_key.pem"
